# handwrite_number_recognition

./: README.md
catkin_number/src/door_nub_r/: CMakeLists.txt  package.xml
catkin_number/src/door_nub_r/src/: cam_test.cpp  dealdata.h  hogmat.h  main_6.cpp
catkin_number/src/nub_r/: CMakeLists.txt  package.xml
catkin_number/src/nub_r/src/: dealdata.h  main.cpp
